--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/db": "^0.11.4",
     "@astrojs/node": "^8.2.5",
+    "@astrojs/react": "^3.4.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@auth/core": "^0.18.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.9.2",
     "auth-astro": "^4.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   }
 }
