--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/node": "^8.2.5",
     "@astrojs/react": "^3.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.6.0",
     "@auth/core": "^0.18.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
